--- a/client/src/components/JobCard/JobCard.module.css
+++ b/client/src/components/JobCard/JobCard.module.css
@@ -1,106 +1,106 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.main_card{
-    width: 100%;
-    height: 17vh;
-    margin: 0 auto 1.5% auto;
-    box-shadow: 0 0 10px #FF2020;
-    border: 1px solid #FF2020;
-    border-left: 5px solid #FF2020;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    display: flex;
-    background-color: white;
+.main_card {
+  width: 100%;
+  height: 17vh;
+  margin: 0 auto 1.5% auto;
+  box-shadow: 0 0 10px #ff2020;
+  border: 1px solid #ff2020;
+  border-left: 5px solid #ff2020;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: flex;
+  background-color: white;
 }
 
-.left_container{
-    height: 100%;
-    width: 40%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
+.left_container {
+  height: 100%;
+  width: 40%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
-.right_container{
-    height: 100%;
-    width: 60%;
-    display: flex;
-    flex-direction: column; 
-    justify-content: space-evenly;
+.right_container {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.details_container{
-    height: 100%;
-    width: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding-left: 6%;
+.details_container {
+  height: 100%;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 6%;
 }
 
-.salarydetails{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 5%;
-    color: #9C9C9C;
+.salarydetails {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5%;
+  color: #9c9c9c;
 }
-.remote{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 10%;
-    color: #FF2020;
-}
-
-.skills{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
+.remote {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10%;
+  color: #ff2020;
 }
 
-.skills span{
-    background-color: #FFEEEE;
-    color: black;
-    padding: 0.6rem;
-    border-radius: 6px;
-    margin-right: 1rem;
-    font-weight: 500;
+.skills {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.button_container{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 2.7%;
-    gap: 5%;
+.skills span {
+  background-color: #ffeeee;
+  color: black;
+  padding: 0.6rem;
+  border-radius: 6px;
+  margin-right: 1rem;
+  font-weight: 500;
 }
 
-.edit{
-    height: 35px;
-    width: 18%;
-    outline: none;
-    border: 1px solid #ED5353;
-    background-color: #FFEEEE;
-    border-radius: 3px;
-    color: #ED5353;
-    font-size: 15px;
-    cursor: pointer;
+.button_container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 2.7%;
+  gap: 5%;
 }
 
-.viewdetail{
-    height: 35px;
-    width: 18%;
-    outline: none;
-    border: none;
-    background-color:  #ED5353;
-    border-radius: 3px;
-    color: whitesmoke;
-    font-size: 15px;
-    font-weight: 500;
-    cursor: pointer;
+.edit {
+  height: 35px;
+  width: 18%;
+  outline: none;
+  border: 1px solid #ed5353;
+  background-color: #ffeeee;
+  border-radius: 3px;
+  color: #ed5353;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.viewdetail {
+  height: 35px;
+  width: 18%;
+  outline: none;
+  border: none;
+  background-color: #ed5353;
+  border-radius: 3px;
+  color: whitesmoke;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
 }
